testdata/baselines/reference/submodule/conformance/moduleExportAliasExports.errors.txt
Eloquent.js(5,1): error TS1231: An export assignment must be at the top level of a file or module declaration.
Eloquent.js(5,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== Eloquent.js (2 errors) ====
    // bug #27365, crashes from github.com/marijnh/Eloquent-JavaScript
    (function() {
    exports.bigOak = 1
    exports.everywhere = 2
    module.exports = exports
    ~~~~~~
!!! error TS1231: An export assignment must be at the top level of a file or module declaration.
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    })()
    